--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.19.0",
-    "@worldcoin/idkit": "^2.4.1",
-    "@worldcoin/mini-apps-ui-kit-react": "^1.3.4",
+    "@worldcoin/minikit-js": "^1.0.0",
     "lucide-react": "^0.543.0",
     "next": "15.5.2",
     "react": "19.1.0",
